Improved menu layout

--- a/index.html
+++ b/index.html
@@ -257,156 +257,170 @@
             <div class="menu__content">
                 <!-------- Drinks carousel ---------->
                 <div class="menu__carousel">
+                    <!-------- Previous button ---------->
                     <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                    <!----------------------------------->
 
-                    <div class="menu__drinks">
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Cappuccino</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cappuccino2.jpg" alt="cappuccino">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Doppio</h4>
-                                <img class="menu__card-img" src="./assets/imgs/doppio.jpg" alt="doppio">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Latte</h4>
-                                <img class="menu__card-img" src="./assets/imgs/latte2.png" alt="latte">
-                            </li>
-                        </ul>
+                    <!---------- Drinks list ------------>
+                    <ul class="menu__card-list">
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Cappuccino</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cappuccino2.jpg" alt="cappuccino">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Mocha</h4>
-                                <img class="menu__card-img" src="./assets/imgs/mocha2.jpg" alt="mocha">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Americano</h4>
-                                <img class="menu__card-img" src="./assets/imgs/americano2.png" alt="americano">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Cortado</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cortado2.jpg" alt="cortado">
-                            </li>
-                        </ul>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Doppio</h4>
+                            <img class="menu__card-img" src="./assets/imgs/doppio.jpg" alt="doppio">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Lungo</h4>
-                                <img class="menu__card-img" src="./assets/imgs/lungo2.png" alt="cappuccino">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Affogato</h4>
-                                <img class="menu__card-img" src="./assets/imgs/affogato2.jpg" alt="affogato">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Frappé</h4>
-                                <img class="menu__card-img" src="./assets/imgs/frappe2.jpg" alt=" frappé">
-                            </li>
-                        </ul>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Latte</h4>
+                            <img class="menu__card-img" src="./assets/imgs/latte2.png" alt="latte">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Machiatto</h4>
-                                <img class="menu__card-img" src="./assets/imgs/coffee-machiatto2.png" alt="machiatto">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Ristretto</h4>
-                                <img class="menu__card-img" src="./assets/imgs/ristretto2.jpg" alt="Ristretto">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Flat white</h4>
-                                <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white">
-                            </li>
-                        </ul>
-                    </div>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Mocha</h4>
+                            <img class="menu__card-img" src="./assets/imgs/mocha2.jpg" alt="mocha">
+                        </li>
 
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Americano</h4>
+                            <img class="menu__card-img" src="./assets/imgs/americano2.png" alt="americano">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Cortado</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cortado2.jpg" alt="cortado">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Lungo</h4>
+                            <img class="menu__card-img" src="./assets/imgs/lungo2.png" alt="cappuccino">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Affogato</h4>
+                            <img class="menu__card-img" src="./assets/imgs/affogato2.jpg" alt="affogato">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Frappé</h4>
+                            <img class="menu__card-img" src="./assets/imgs/frappe2.jpg" alt=" frappé">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Machiatto</h4>
+                            <img class="menu__card-img" src="./assets/imgs/coffee-machiatto2.png" alt="machiatto">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Ristretto</h4>
+                            <img class="menu__card-img" src="./assets/imgs/ristretto2.jpg" alt="Ristretto">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Flat white</h4>
+                            <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white">
+                        </li>
+                    </ul>
+                    <!----------------------------------->
+
+                    <!---------- Next button ------------>
                     <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                    <!----------------------------------->
                 </div>
+                <!----------------------------------->
+
+                <!------- Search drink form --------->
+                <form class="menu__search-form">
+                    <label class="menu__search-label" for="coffee-search">What's your desire?</label>
+                    <div class="menu__search-bar">
+                        <input placeholder="Search a drink here..." class="menu__search-input" id="coffee-search"
+                            name="coffee-search" type="text">
+                        <button class="menu__search-btn"><i class="fa fa-search"></i></button>
+                    </div>
+                </form>
                 <!----------------------------------->
 
                 <!-------- Drinks carousel ---------->
                 <div class="menu__carousel">
+                    <!-------- Previous button ---------->
                     <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                    <!----------------------------------->
 
-                    <div class="menu__drinks">
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Au Lait</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cafe-au-lait2.jpg" alt="café au lait">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Cortadito</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cortadito2.jpg" alt="cortadito">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Cubano</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cubano2.jpg" alt="cubano">
-                            </li>
-                        </ul>
+                    <!---------- Drinks list ------------>
+                    <ul class="menu__card-list">
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Au Lait</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cafe-au-lait2.jpg" alt="café au lait">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Eiskaffee</h4>
-                                <img class="menu__card-img" src="./assets/imgs/eiskaffee2.jpg" alt="eiskaffee">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">De Olla</h4>
-                                <img class="menu__card-img" src="./assets/imgs/cafe-de-olla2.jpg" alt="de olla">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Mazagran</h4>
-                                <img class="menu__card-img" src="./assets/imgs/mazagran2.jpg" alt="mazagran">
-                            </li>
-                        </ul>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Cortadito</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cortadito2.jpg" alt="cortadito">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Red Eye</h4>
-                                <img class="menu__card-img" src="./assets/imgs/red-eye2.jpg" alt="red eye">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Gibraltar</h4>
-                                <img class="menu__card-img" src="./assets/imgs/gibraltar2.jpg" alt="gibraltar">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Piccolo</h4>
-                                <img class="menu__card-img" src="./assets/imgs/piccolo2.jpg" alt=" piccolo">
-                            </li>
-                        </ul>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Cubano</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cubano2.jpg" alt="cubano">
+                        </li>
 
-                        <ul class="menu__card-list">
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Con Leche</h4>
-                                <img class="menu__card-img" src="./assets/imgs/con-leche2.jpg" alt="con leche">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Breve</h4>
-                                <img class="menu__card-img" src="./assets/imgs/breve2.jpg" alt="breve">
-                            </li>
-                            <li class="menu__card">
-                                <h4 class="menu__card-title">Galão</h4>
-                                <img class="menu__card-img" src="./assets/imgs/galao2.jpg" alt="galão">
-                            </li>
-                        </ul>
-                    </div>
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Eiskaffee</h4>
+                            <img class="menu__card-img" src="./assets/imgs/eiskaffee2.jpg" alt="eiskaffee">
+                        </li>
 
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">De Olla</h4>
+                            <img class="menu__card-img" src="./assets/imgs/cafe-de-olla2.jpg" alt="de olla">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Mazagran</h4>
+                            <img class="menu__card-img" src="./assets/imgs/mazagran2.jpg" alt="mazagran">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Red Eye</h4>
+                            <img class="menu__card-img" src="./assets/imgs/red-eye2.jpg" alt="red eye">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Gibraltar</h4>
+                            <img class="menu__card-img" src="./assets/imgs/gibraltar2.jpg" alt="gibraltar">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Piccolo</h4>
+                            <img class="menu__card-img" src="./assets/imgs/piccolo2.jpg" alt=" piccolo">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Con Leche</h4>
+                            <img class="menu__card-img" src="./assets/imgs/con-leche2.jpg" alt="con leche">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Breve</h4>
+                            <img class="menu__card-img" src="./assets/imgs/breve2.jpg" alt="breve">
+                        </li>
+
+                        <li class="menu__card">
+                            <h4 class="menu__card-title">Galão</h4>
+                            <img class="menu__card-img" src="./assets/imgs/galao2.jpg" alt="galão">
+                        </li>
+                    </ul>
+                    <!----------------------------------->
+
+                    <!---------- Next button ------------>
                     <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                    <!----------------------------------->
                 </div>
                 <!----------------------------------->
             </div>
             <!----------------------------------->
 
-            <!------- Search drink form --------->
-            <form class="menu__search-form">
-                <label class="menu__search-label" for="coffee-search">What's your desire?</label>
-                <div class="menu__search-bar">
-                    <input placeholder="Search a drink here..." class="menu__search-input" id="coffee-search"
-                        name="coffee-search" type="text">
-                    <button class="menu__search-btn"><i class="fa fa-search"></i></button>
-                </div>
-            </form>
-            <!----------------------------------->
+
             </div>
         </section>
         <!----------------------------------->
