Added drag functionality to menu carousels

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <!----------- JavaScript ------------>
     <script type="module" src="./JS/utils.js"></script>
-    <script type="module" src="./JS/main.js"></script>
+    <script type="module" src="./JS/app.js"></script>
     <!----------------------------------->
 </head>
 
@@ -265,62 +265,70 @@
                     <ul class="menu__card-list">
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cappuccino</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cappuccino2.jpg" alt="cappuccino">
+                            <img class="menu__card-img" src="./assets/imgs/cappuccino2.jpg" alt="cappuccino"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Doppio</h4>
-                            <img class="menu__card-img" src="./assets/imgs/doppio.jpg" alt="doppio">
+                            <img class="menu__card-img" src="./assets/imgs/doppio.jpg" alt="doppio" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Latte</h4>
-                            <img class="menu__card-img" src="./assets/imgs/latte2.png" alt="latte">
+                            <img class="menu__card-img" src="./assets/imgs/latte2.png" alt="latte" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Mocha</h4>
-                            <img class="menu__card-img" src="./assets/imgs/mocha2.jpg" alt="mocha">
+                            <img class="menu__card-img" src="./assets/imgs/mocha2.jpg" alt="mocha" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Americano</h4>
-                            <img class="menu__card-img" src="./assets/imgs/americano2.png" alt="americano">
+                            <img class="menu__card-img" src="./assets/imgs/americano2.png" alt="americano"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cortado</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cortado2.jpg" alt="cortado">
+                            <img class="menu__card-img" src="./assets/imgs/cortado2.jpg" alt="cortado"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Lungo</h4>
-                            <img class="menu__card-img" src="./assets/imgs/lungo2.png" alt="cappuccino">
+                            <img class="menu__card-img" src="./assets/imgs/lungo2.png" alt="cappuccino"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Affogato</h4>
-                            <img class="menu__card-img" src="./assets/imgs/affogato2.jpg" alt="affogato">
+                            <img class="menu__card-img" src="./assets/imgs/affogato2.jpg" alt="affogato"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Frappé</h4>
-                            <img class="menu__card-img" src="./assets/imgs/frappe2.jpg" alt=" frappé">
+                            <img class="menu__card-img" src="./assets/imgs/frappe2.jpg" alt=" frappé" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Machiatto</h4>
-                            <img class="menu__card-img" src="./assets/imgs/coffee-machiatto2.png" alt="machiatto">
+                            <img class="menu__card-img" src="./assets/imgs/coffee-machiatto2.png" alt="machiatto"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Ristretto</h4>
-                            <img class="menu__card-img" src="./assets/imgs/ristretto2.jpg" alt="Ristretto">
+                            <img class="menu__card-img" src="./assets/imgs/ristretto2.jpg" alt="Ristretto"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Flat white</h4>
-                            <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white">
+                            <img class="menu__card-img" src="./assets/imgs/flat-white2.jpg" alt="flat white"
+                                draggable="false">
                         </li>
                     </ul>
                     <!----------------------------------->
@@ -352,62 +360,71 @@
                     <ul class="menu__card-list">
                         <li class="menu__card">
                             <h4 class="menu__card-title">Au Lait</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cafe-au-lait2.jpg" alt="café au lait">
+                            <img class="menu__card-img" src="./assets/imgs/cafe-au-lait2.jpg" alt="café au lait"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cortadito</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cortadito2.jpg" alt="cortadito">
+                            <img class="menu__card-img" src="./assets/imgs/cortadito2.jpg" alt="cortadito"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cubano</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cubano2.jpg" alt="cubano">
+                            <img class="menu__card-img" src="./assets/imgs/cubano2.jpg" alt="cubano" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Eiskaffee</h4>
-                            <img class="menu__card-img" src="./assets/imgs/eiskaffee2.jpg" alt="eiskaffee">
+                            <img class="menu__card-img" src="./assets/imgs/eiskaffee2.jpg" alt="eiskaffee"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">De Olla</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cafe-de-olla2.jpg" alt="de olla">
+                            <img class="menu__card-img" src="./assets/imgs/cafe-de-olla2.jpg" alt="de olla"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Mazagran</h4>
-                            <img class="menu__card-img" src="./assets/imgs/mazagran2.jpg" alt="mazagran">
+                            <img class="menu__card-img" src="./assets/imgs/mazagran2.jpg" alt="mazagran"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Red Eye</h4>
-                            <img class="menu__card-img" src="./assets/imgs/red-eye2.jpg" alt="red eye">
+                            <img class="menu__card-img" src="./assets/imgs/red-eye2.jpg" alt="red eye"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Gibraltar</h4>
-                            <img class="menu__card-img" src="./assets/imgs/gibraltar2.jpg" alt="gibraltar">
+                            <img class="menu__card-img" src="./assets/imgs/gibraltar2.jpg" alt="gibraltar"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Piccolo</h4>
-                            <img class="menu__card-img" src="./assets/imgs/piccolo2.jpg" alt=" piccolo">
+                            <img class="menu__card-img" src="./assets/imgs/piccolo2.jpg" alt=" piccolo"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Con Leche</h4>
-                            <img class="menu__card-img" src="./assets/imgs/con-leche2.jpg" alt="con leche">
+                            <img class="menu__card-img" src="./assets/imgs/con-leche2.jpg" alt="con leche"
+                                draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Breve</h4>
-                            <img class="menu__card-img" src="./assets/imgs/breve2.jpg" alt="breve">
+                            <img class="menu__card-img" src="./assets/imgs/breve2.jpg" alt="breve" draggable="false">
                         </li>
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Galão</h4>
-                            <img class="menu__card-img" src="./assets/imgs/galao2.jpg" alt="galão">
+                            <img class="menu__card-img" src="./assets/imgs/galao2.jpg" alt="galão" draggable="false">
                         </li>
                     </ul>
                     <!----------------------------------->
@@ -419,9 +436,6 @@
                 <!----------------------------------->
             </div>
             <!----------------------------------->
-
-
-            </div>
         </section>
         <!----------------------------------->
 
