Improved menu carousel

--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
                     <ul class="menu__card-list">
                         <li class="menu__card">
                             <h4 class="menu__card-title">Cappuccino</h4>
-                            <img class="menu__card-img" src="./assets/imgs/cappuccino2.jpg" alt="cappuccino"
+                            <img class="menu__card-img" src="./assets/imgs/cappuccino.png" alt="cappuccino"
                                 draggable="false">
-                        </li>
+                        </li>`
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Doppio</h4>
-                            <img class="menu__card-img" src="./assets/imgs/doppio.jpg" alt="doppio" draggable="false">
+                            <img class="menu__card-img" src="./assets/imgs/doppio3.jpg" alt="doppio" draggable="false">
                         </li>
 
                         <li class="menu__card">
@@ -304,7 +304,7 @@
 
                         <li class="menu__card">
                             <h4 class="menu__card-title">Affogato</h4>
-                            <img class="menu__card-img" src="./assets/imgs/affogato2.jpg" alt="affogato"
+                            <img class="menu__card-img" src="./assets/imgs/affogato3.jpg" alt="affogato"
                                 draggable="false">
                         </li>
 
