--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
 
                 <!---------- User options ----------->
                 <div class="main-nav__btns">
-                    <button class="highlited-btn primary" aria-label="Login button"><i class="main-nav__icon fa fa-user"
-                            aria-hidden="true"></i>
+                    <button class="main-nav__btn highlited-btn primary" aria-label="Login button"><i
+                            class="main-nav__icon fa fa-user" aria-hidden="true"></i>
                         Login</button>
-                    <button class="highlited-btn secondary" aria-label="Cart button"><i
+                    <button class="main-nav__btn highlited-btn secondary" aria-label="Cart button"><i
                             class="main-nav__icon fa fa-shopping-cart" aria-hidden="true"></i> Cart</button>
                 </div>
                 <!----------------------------------->
@@ -185,7 +185,7 @@
             <!----------------------------------->
 
             <!---------- Slide content ---------->
-            <div class="hero__slide-content">
+            <div class="hero__slide-content wrapper">
                 <!------------- Slider -------------->
                 <div class="hero__slider">
                     <!------ Previous slide button ------>
@@ -441,7 +441,7 @@
 
         <!----- Special drinks section ------>
         <section class="special-drinks" id="special-drinks">
-            <div class="section-title-wrapper">
+            <div class="special-drinks__title-wrapper section-title-wrapper">
                 <!------- Special rinks title ------->
                 <h3 class="section-title">These are <span class="highlight-three special-one">exclusively</span> for
                     <span class="highlight-three special-one">you</span>!
@@ -481,11 +481,11 @@
             <!----------------------------------->
 
             <!---------- Slide content ---------->
-            <div class="special-drinks__slide-content">
+            <div class="special-drinks__slide-content wrapper">
                 <!------------- Slider -------------->
                 <div class="special-drinks__slider">
                     <!------ Previous slide button ------>
-                    <button class="action-button prev" aria-label="previous slide">
+                    <button class="special-drinks__change-slide action-button prev" aria-label="previous slide">
                         <i class="fa fa-chevron-left" aria-hidden="true"></i>
                     </button>
                     <!----------------------------------->
@@ -501,7 +501,7 @@
                     <!----------------------------------->
 
                     <!-------- Next slide button -------->
-                    <button class="action-button next" aria-label="next slide">
+                    <button class="special-drinks__change-slide action-button next" aria-label="next slide">
                         <i class="fa fa-chevron-right" aria-hidden="true"></i>
                     </button>
                     <!----------------------------------->
@@ -532,8 +532,8 @@
 
                     <!---------- Slide buttons ---------->
                     <div class="special-drinks__slide-btns">
-                        <button class="highlited-btn primary">See drink</button>
-                        <button class="highlited-btn secondary">View in app</button>
+                        <button class="special-drinks__slide-btn highlited-btn primary">See drink</button>
+                        <button class="special-drinks__slide-btn highlited-btn secondary">View in app</button>
                     </div>
                     <!----------------------------------->
                 </div>
@@ -683,7 +683,7 @@
     <!----------------------------------->
 
     <!---- Scrolling control section ---->
-    <section id="#controls" class="controls">
+    <div id="#controls" class="controls">
         <!-------- Scroll top button -------->
         <button data-action="top" class="controls__scroll-btn action-button" title="Go to top"
             aria-label="Go to the top of the page">
@@ -697,7 +697,7 @@
             <i class="fa fa-chevron-down" aria-hidden="true"></i>
         </button>
         <!----------------------------------->
-    </section>
+    </div>
     <!----------------------------------->
 
     <!------------- Footer -------------->
