--- a/index.html
+++ b/index.html
@@ -257,8 +257,13 @@
             <div class="menu__content">
                 <!-------- Drinks carousel ---------->
                 <div class="menu__carousel">
-                    <!-------- Previous button ---------->
-                    <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                    <!----- Previous slides buttons ----->
+                    <div class="menu__slider-btns-wrapper">
+                        <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                        <button class="menu__slider-btn prev">
+                            <i class="fa fa-chevron-left"></i><i class="fa fa-chevron-left"></i>
+                        </button>
+                    </div>
                     <!----------------------------------->
 
                     <!---------- Drinks list ------------>
@@ -333,8 +338,13 @@
                     </ul>
                     <!----------------------------------->
 
-                    <!---------- Next button ------------>
-                    <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                    <!------- Next slides buttons ------->
+                    <div class="menu__slider-btns-wrapper">
+                        <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                        <button class="menu__slider-btn next">
+                            <i class="fa fa-chevron-right"></i><i class="fa fa-chevron-right"></i>
+                        </button>
+                    </div>
                     <!----------------------------------->
                 </div>
                 <!----------------------------------->
@@ -352,8 +362,13 @@
 
                 <!-------- Drinks carousel ---------->
                 <div class="menu__carousel">
-                    <!-------- Previous button ---------->
-                    <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                    <!----- Previous slides buttons ----->
+                    <div class="menu__slider-btns-wrapper">
+                        <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
+                        <button class="menu__slider-btn prev">
+                            <i class="fa fa-chevron-left"></i><i class="fa fa-chevron-left"></i>
+                        </button>
+                    </div>
                     <!----------------------------------->
 
                     <!---------- Drinks list ------------>
@@ -429,8 +444,13 @@
                     </ul>
                     <!----------------------------------->
 
-                    <!---------- Next button ------------>
-                    <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                    <!------- Next slides buttons ------->
+                    <div class="menu__slider-btns-wrapper">
+                        <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
+                        <button class="menu__slider-btn next">
+                            <i class="fa fa-chevron-right"></i><i class="fa fa-chevron-right"></i>
+                        </button>
+                    </div>
                     <!----------------------------------->
                 </div>
                 <!----------------------------------->
