feat(menu, buttons): Add skip multiple card buttons in menu carousels and click sound effect in every button

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <!----- Previous slides buttons ----->
                     <div class="menu__slider-btns-wrapper">
                         <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
-                        <button class="menu__slider-btn prev">
+                        <button class="menu__slider-btn prev sliding-multiplier">
                             <i class="fa fa-chevron-left"></i><i class="fa fa-chevron-left"></i>
                         </button>
                     </div>
@@ -341,7 +341,7 @@
                     <!------- Next slides buttons ------->
                     <div class="menu__slider-btns-wrapper">
                         <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
-                        <button class="menu__slider-btn next">
+                        <button class="menu__slider-btn next sliding-multiplier">
                             <i class="fa fa-chevron-right"></i><i class="fa fa-chevron-right"></i>
                         </button>
                     </div>
@@ -365,7 +365,7 @@
                     <!----- Previous slides buttons ----->
                     <div class="menu__slider-btns-wrapper">
                         <button class="menu__slider-btn prev"><i class="fa fa-chevron-left"></i></button>
-                        <button class="menu__slider-btn prev">
+                        <button class="menu__slider-btn prev sliding-multiplier">
                             <i class="fa fa-chevron-left"></i><i class="fa fa-chevron-left"></i>
                         </button>
                     </div>
@@ -447,7 +447,7 @@
                     <!------- Next slides buttons ------->
                     <div class="menu__slider-btns-wrapper">
                         <button class="menu__slider-btn next"><i class="fa fa-chevron-right"></i></button>
-                        <button class="menu__slider-btn next">
+                        <button class="menu__slider-btn next sliding-multiplier">
                             <i class="fa fa-chevron-right"></i><i class="fa fa-chevron-right"></i>
                         </button>
                     </div>
